many code much changes wow

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,71 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Insurance</title>
+  <title><%= yield :title %> - Все о страховании</title>
+  <meta name="Description" content="<%= yield :meta_desc %>">
+  <meta name="Keywords" content="<%= yield :meta_keywords %>">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-<%= yield %>
+<ul>
+  <% Page.root_pages.each do |page| %>
+      <li><a href="/<%= page.slug %>"><%= page.title %></a></li>
+  <% end %>
+</ul>
 
+<%= yield %>
+<!-- Footer -->
+<div id="footer">
+  <div class="container">
+    <div class="row">
+      <div class="4u">
+        <section>
+          <h2>Latest Posts</h2>
+          <ul class="default">
+            <li><a href="#">Pellentesque lectus gravida blandit</a></li>
+            <li><a href="#">Lorem ipsum consectetuer adipiscing</a></li>
+            <li><a href="#">Phasellus nibh pellentesque congue</a></li>
+            <li><a href="#">Cras vitae metus aliquam pharetra</a></li>
+            <li><a href="#">Maecenas vitae orci feugiat eleifend</a></li>
+          </ul>
+        </section>
+      </div>
+      <div class="4u">
+        <section>
+          <h2>Ultrices fringilla</h2>
+          <ul class="default">
+            <li><a href="#">Pellentesque lectus gravida blandit</a></li>
+            <li><a href="#">Lorem ipsum consectetuer adipiscing</a></li>
+            <li><a href="#">Phasellus nibh pellentesque congue</a></li>
+            <li><a href="#">Cras vitae metus aliquam pharetra</a></li>
+            <li><a href="#">Maecenas vitae orci feugiat eleifend</a></li>
+          </ul>
+        </section>
+      </div>
+      <div class="4u">
+        <section>
+          <h2>Aenean elementum</h2>
+          <ul class="default">
+            <li><a href="#">Pellentesque lectus gravida blandit</a></li>
+            <li><a href="#">Lorem ipsum consectetuer adipiscing</a></li>
+            <li><a href="#">Phasellus nibh pellentesque congue</a></li>
+            <li><a href="#">Cras vitae metus aliquam pharetra</a></li>
+            <li><a href="#">Maecenas vitae orci feugiat eleifend</a></li>
+          </ul>
+        </section>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Copyright -->
+<div id="copyright">
+  <div class="container">
+    Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)
+  </div>
+</div>
 </body>
 </html>
