--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,3 +16,14 @@
  *= require font-awesome
  *= require_self
  */
+
+
+.attention-block {
+    background-color: #f2f2f2;
+    -webkit-border-radius: 25px;
+    -moz-border-radius: 25px;
+    border-radius: 25px;
+    margin: 4px;
+    padding: 25px;
+
+}
