--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -11,9 +11,24 @@
 <div>
   <h1>Панель управления</h1>
   <a href="<%= pages_path %>">Страницы сайта</a>
+  <a href="<%= pages_my_articles_path %>">Мои статьи</a>
+  <% if current_user.has_role? :admin %>
+    <a href="<%= user_list_path %>">Юзера</a>
+  <% end %>
+  <% if can? :approve, Page %>
+    <a href="<%= approve_articles_path %>">Статьи на аппрув(<%= Page.waiting_for_approve.count %>)</a>
+  <% end %>
 </div>
 <div>
   <span>Вы зашли как <%= current_user.username %></span>
+  <span>Роль:</span>
+  <% if current_user.has_role? :admin %>
+    <span>Admin</span>
+  <% elsif current_user.has_role? :content_manager, Page%>
+      <span>Content-ninja</span>
+  <% else %>
+    <span>Unknown</span>
+  <% end %>
   <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
 </div>
 <div><p id="notice"><%= notice %></p></div>
