--- a/app/views/pages/_pages_list.html.erb
+++ b/app/views/pages/_pages_list.html.erb
@@ -3,9 +3,9 @@
       <td><%= page.title %></td>
       <!--<td><%= page.slug %></td>-->
 
-      <td><%= link_to 'Show', page %></td>
-      <td><%= link_to 'Edit', edit_page_path(page) %></td>
-      <td><%= link_to 'Destroy', page, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <td><%= link_to 'Show', page if can? :read, @page %></td>
+      <td><%= link_to 'Edit', edit_page_path(page) if can? :update, @page %></td>
+      <td><%= link_to 'Destroy', page, method: :delete, data: { confirm: 'Are you sure?' } if can? :destroy, @page %></td>
     </tr>
     <% if page.child_pages.count > 0 %>
         <div class="child-pages">
