--- a/app/views/pages/default_page.html.erb
+++ b/app/views/pages/default_page.html.erb
@@ -1,1 +1,81 @@
-There is a page
+<% title(@page.title) %>
+<% meta_keywords (@page.meta_keywords)  %>
+<% meta_description(@page.meta_description) %>
+
+<div id="main">
+  <div class="container">
+    <div class="row">
+
+      <!-- Content -->
+      <div id="content" class="8u skel-cell-important">
+        <section>
+          <header>
+            <h2><%= @page.title %></h2>
+            <span class="byline"></span>
+          </header>
+          <%= @page.body.html_safe if @page.body %>
+        </section>
+      </div>
+
+<!--      &lt;!&ndash; Sidebar &ndash;&gt;
+      <div id="sidebar" class="4u">
+        <section>
+          <header>
+            <h2>Pellentesque vulputate</h2>
+          </header>
+          <ul class="style">
+            <li>
+              <p class="posted">August 11, 2002  |  (10 )  Comments</p>
+              <img src="images/pic04.jpg" alt="" />
+              <p class="text">Nullam non wisi a sem eleifend. Donec mattis libero eget urna. Pellentesque viverra enim.</p>
+            </li>
+            <li>
+              <p class="posted">August 11, 2002  |  (10 )  Comments</p>
+              <img src="images/pic05.jpg" alt="" />
+              <p class="text">Nullam non wisi a sem eleifend. Donec mattis libero eget urna. Pellentesque viverra enim.</p>
+            </li>
+            <li>
+              <p class="posted">August 11, 2002  |  (10 )  Comments</p>
+              <img src="images/pic06.jpg" alt="" />
+              <p class="text">Nullam non wisi a sem eleifend. Donec mattis libero eget urna. Pellentesque viverra enim.</p>
+            </li>
+            <li>
+              <p class="posted">August 11, 2002  |  (10 )  Comments</p>
+              <img src="images/pic05.jpg" alt="" />
+              <p class="text">Nullam non wisi a sem eleifend. Donec mattis libero eget urna. Pellentesque viverra enim.</p>
+            </li>
+          </ul>
+        </section>
+      </div>-->
+
+    </div>
+  </div>
+</div>
+
+<!-- Footer -->
+<div id="featured">
+  <div class="container">
+    <div class="row">
+      <div class="4u">
+        <h2>Aenean elementum facilisis</h2>
+        <a href="#" class="image full"><img src="images/pic01.jpg" alt="" /></a>
+        <p>Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum. Quisque dictum. Pellentesque viverra vulputate enim.</p>
+        <p><a href="#" class="button">More Details</a></p>
+      </div>
+      <div class="4u">
+        <h2>Fusce ultrices fringilla</h2>
+        <a href="#" class="image full"><img src="images/pic02.jpg" alt="" /></a>
+        <p>Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum. Quisque dictum. Pellentesque viverra vulputate enim.</p>
+        <p><a href="#" class="button">More Details</a></p>
+      </div>
+      <div class="4u">
+        <h2>Etiam rhoncus volutpat erat</h2>
+        <a href="#" class="image full"><img src="images/pic03.jpg" alt="" /></a>
+        <p>Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum. Quisque dictum. Pellentesque viverra vulputate enim.</p>
+        <p><a href="#" class="button">More Details</a></p>
+      </div>
+    </div>
+  </div>
+</div>
+
+
