--- a/app/views/admin/users.html.erb
+++ b/app/views/admin/users.html.erb
@@ -8,5 +8,5 @@
 <% end %>
 <br>
 <% if can? :create, User %>
-    <%= link_to 'Add new user', add_user_path %>
+    <%= link_to 'Add new user', add_user_path, class: 'btn' %>
 <% end %>
