--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,8 @@
   <title><%= yield :title %> - Все о страховании</title>
   <meta name="Description" content="<%= yield :meta_desc %>">
   <meta name="Keywords" content="<%= yield :meta_keywords %>">
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', media: 'all'%>
+  <%= javascript_include_tag 'application'  %>
   <%= csrf_meta_tags %>
 </head>
 <body>
