--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -8,6 +8,7 @@
 
 <% if current_user.has_role? :admin %>
     <div>некатегоризированное</div>
+    <table>
     <% @uncategorized_pages.each do |page| %>
         <tr>
           <td><%= page.title %></td>
@@ -15,13 +16,14 @@
           <td><%= page.template_name %></td>
           <td><%= page.is_published %></td>
 
-          <td><%= link_to 'Show', page %></td>
-          <td><%= link_to 'Edit', edit_page_path(page) %></td>
-          <td><%= link_to 'Destroy', page, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%= link_to 'Show', page_preview_path(page), class: 'btn' %></td>
+          <td><%= link_to 'Edit', edit_page_path(page), class: 'btn btn-blue' %></td>
+          <td><%= link_to 'Destroy', page, method: :delete, class: 'btn btn-red', data: { confirm: 'Are you sure?' } %></td>
         </tr>
     <% end %>
+    </table>
 <% end %>
+<div class="add-article">
+  <%= link_to 'Добавить публикацию', new_page_path, class: 'btn' %>
+</div>
 
-<br>
-
-<%= link_to 'Добавить публикацию', new_page_path %>
