--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,10 +1,21 @@
 <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_for(resource, as: resource_name, url: registr_path) do |f| %>
   <%= devise_error_messages! %>
+    <% if resource.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(resource.errors.count, "error") %> prohibited this page from being saved:</h2>
+
+          <ul>
+            <% resource.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
+    <% end %>
 
 
-  <div class="field">
+    <div class="field">
     <%= f.label :username %> <br />
     <%= f.text_field :username, autofocus: true %>
   </div>
@@ -28,8 +39,8 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Sign up", class: 'btn' %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+
