--- a/app/views/pages/my_articles.html.erb
+++ b/app/views/pages/my_articles.html.erb
@@ -17,13 +17,15 @@
             <%= form_for page, url: toggle_page_moderation_status_path, id: :id do |f| %>
                <%= f.hidden_field :to_be_moderated, :value => page.to_be_moderated %>
                 <%= f.hidden_field :id, value: page.id %>
-               <%= f.submit moderate_button_content(page) %>
+               <%= f.submit moderate_button_content(page), class: 'btn' %>
             <% end %>
         <% end %>
       </td>
-      <td><%= link_to 'Preview', page_preview_path(page), target: '_blank' %></td>
-      <td><%= link_to 'Edit', edit_page_path(page) %></td>
-      <td><%= link_to 'Destroy', page, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <td><%= link_to 'Preview', page_preview_path(page), class: 'btn', target: '_blank' %></td>
+      <td><%= link_to 'Edit', edit_page_path(page), class: 'btn btn-blue' %></td>
+      <td><%= link_to 'Destroy', page, method: :delete, class: 'btn btn-red', data: { confirm: 'Are you sure?' } %></td>
     </tr>
 <% end %>
 </table>
+
+<%= link_to 'Добавить публикацию', new_page_path, class: 'btn' %>
