--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -7,8 +7,8 @@
 <%= render partial: 'pages/pages_list', locals: { pages: @root_pages }  %>
 
 <% if current_user.has_role? :admin %>
-    <div>некатегоризированное</div>
-    <table>
+    <div >некатегоризированное</div>
+    <table style="width:800px;">
     <% @uncategorized_pages.each do |page| %>
         <tr>
           <td><%= page.title %></td>
